--- a/Frontend/src/components/PagesComponents/Shipment/ShipmentPage.css
+++ b/Frontend/src/components/PagesComponents/Shipment/ShipmentPage.css
@@ -1,4 +1,4 @@
-.mainExternalContainer {
+/* .mainExternalContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
@@ -11,3 +11,4 @@
         grid-template-columns: 1fr;
     }
 }
+ */
