--- a/Frontend/src/components/PagesComponents/Shipment/DeliveryRoutes.css
+++ b/Frontend/src/components/PagesComponents/Shipment/DeliveryRoutes.css
@@ -54,14 +54,14 @@
 }
 
 /* Estilos específicos para dispositivos móviles */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .popup {
-    width: 90%; /* Ajusta el ancho para pantallas pequeñas */
+    width: 90%; 
   }
   
   .lista-repartidores {
-    padding: 5px 10px; /* Reduce el padding en dispositivos móviles */
-    max-height: 260px; /* Ajustar la altura máxima para un mejor desplazamiento en móviles */
+    padding: 5px 10px; 
+    max-height: 260px; 
     max-width: 300px;
     margin-left: 10px;
   }
@@ -72,11 +72,11 @@
 
 
   .card-container {
-    margin: 10px 0; /* Ajusta el margen de las tarjetas en dispositivos móviles */
+    margin: 10px 0; 
   }
   
   .card-content {
-    padding: 10px; /* Ajusta el padding en el contenido de las tarjetas */
+    padding: 10px; 
   }
 }
 
@@ -98,7 +98,7 @@
 }
 
 .avatar {
-  width: 50px !important; /* Ajusta el tamaño del avatar */
+  width: 50px !important; 
   height: 50px !important;
   border-radius: 50% !important;
   margin-right: 10px !important;
@@ -144,4 +144,5 @@
 
 .load-more button:hover {
   background-color: #0056b3;
-}
+}*/
+ 
