--- a/Frontend/src/components/buttons/BtnForms/CancelBtn.css
+++ b/Frontend/src/components/buttons/BtnForms/CancelBtn.css
@@ -1,13 +1,14 @@
 .button__cancel {
     position: relative;
-    width: 150px;
+    width: 120px;
     height: 40px;
     cursor: pointer;
     display: flex;
     align-items: center;
     border-radius: 5px;
     border: 1px solid red;
-    background-color: #f14e4e;
+    background-color: #eb3a3a;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   }
   
   .button__cancel, .button__icon__cancel, .button__text__cancel {
@@ -15,14 +16,15 @@
   }
   
   .button__cancel .button__text__cancel {
-    transform: translateX(30px);
-    color: #fff;
+    transform: translateX(10px);
+    color: #ffffff;
     font-weight: 600;
+    letter-spacing: 1px;
   }
   
   .button__cancel .button__icon__cancel {
     position: absolute;
-    transform: translateX(105px);
+    transform: translateX(80px);
     height: 100%;
     width: 39px;
     border-radius: 5px;
@@ -46,14 +48,14 @@
   }
   
   .button__cancel:hover .button__icon__cancel {
-    width: 140px;
+    width: 119px;
     transform: translateX(0);
   }
   
   .button__cancel:active .button__icon__cancel {
-    background-color: #2e8644;
+    background-color: rgb(196, 1, 1);
   }
   
   .button__cancel:active {
-    border: 1px solid #2e8644;
+    border: 1px solid rgb(196, 1, 1);
   }
