--- a/Frontend/src/Styles/Pages/DymanicsPopUps.css
+++ b/Frontend/src/Styles/Pages/DymanicsPopUps.css
@@ -1,4 +1,4 @@
-.input-container {
+/* .input-container {
   position: relative;
   margin: 30px auto;
   width: 300px;
@@ -99,7 +99,6 @@
   transform: scaleX(1);
 }
 
-/* Hacer que el date siempre esté en focus para que el label esté arriba */
 .input-container input[type="date"] ~ .label {
   top: -20px;
   font-size: 16px;
@@ -157,4 +156,4 @@
   font-size: 14px;
   text-align: end;
   color: #ccc;
-}
+} */
