--- a/Frontend/src/layout/InitialLayout.css
+++ b/Frontend/src/layout/InitialLayout.css
@@ -62,11 +62,12 @@ a {
   color: inherit;
 }
 
-.videoInitial {
+.video-cosmic-intro {
   width: 100%;
-  height: 100%;
-
+  height: 80vh;
 }
+
+
 
 .video-Movil {  
   width: 100%;
