--- a/Frontend/src/components/Dashboard/Max.css
+++ b/Frontend/src/components/Dashboard/Max.css
@@ -3,7 +3,7 @@
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  border: 1px solid #323232;
+  /* border: 1px solid #323232; */
   width: 300px;
   height: 150px;
 }
