--- a/Frontend/src/components/Dashboard/VisitchartsData.css
+++ b/Frontend/src/components/Dashboard/VisitchartsData.css
@@ -1,13 +1,13 @@
 .filters_charts {
   display: flex;
   gap: 10px;
-  /* margin-left: 50px; */
 }
 .btn_filter {
   width: 20px;
   cursor: pointer;
   border: none;
   font-size: 1rem;
+  background-color: transparent;
 }
 
 .visit_all_container {
