--- a/Frontend/src/components/FromModal/DynamicFormModal.css
+++ b/Frontend/src/components/FromModal/DynamicFormModal.css
@@ -3,7 +3,7 @@
     margin: 30px auto;
     width: 300px;
   }
-  
+
   .input-container .inputText,
   .input-container input[type="email"],
   .input-container input[type="password"],
@@ -17,7 +17,7 @@
     background-color: transparent;
     outline: none;
   }
-  
+
   .inputSelect {
     width: 300px;
     font-size: 20px;
@@ -26,16 +26,16 @@
     border-bottom: 2px solid #ccc;
     padding: 5px 10px;
   }
-  
-  .input-container input[type="date"] { 
+
+  .input-container input[type="date"] {
     color: #ccc;
   }
-  
+
   .input-container input[type="date"]:focus,
   .input-container input[type="date"].has-content {
     color: black;
   }
-  
+
   .input-container .label {
     position: absolute;
     top: 5px;
@@ -55,13 +55,13 @@
     transition: all 0.3s ease;
     pointer-events: none;
   }
-  
 
-  
+
+
   .input-container input[type="date"]:not(:placeholder-shown) ~ .label {
     color: #ccc;
   }
-  
+
 
   .labelSelect.has-focus,
   .input-container .has-selection ~ .labelSelect {
@@ -82,8 +82,8 @@
     font-size: 16px;
     color: #333;
   }
-  
-  
+
+
   .input-container .underline {
     position: absolute;
     bottom: 0;
@@ -94,11 +94,11 @@
     transform: scaleX(0);
     transition: all 0.3s ease;
   }
-  
+
   .input-container input[type="date"]:not(:placeholder-shown) ~ .underline {
     transform: scaleX(0);
   }
-  
+
   .input-container .inputText:focus ~ .underline,
   .input-container .inputText:not(:placeholder-shown) ~ .underline,
   .input-container .has-selection:focus ~ .underline,
@@ -111,7 +111,7 @@
   .input-container input[type="password"]:not(:placeholder-shown) ~ .underline {
     transform: scaleX(1);
   }
-  
+
   /* Hacer que el date siempre esté en focus para que el label esté arriba */
   .input-container input[type="date"] ~ .label {
     top: -20px;
@@ -121,30 +121,30 @@
   .underline.has-focus {
     transform: scaleX(1);
   }
-  
+
   .swal2-actions {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
   }
-  
+
   .main_ilist span:last-child {
     margin-top: auto;
   }
-  
+
   .main_actions{
     border-top: 1px solid #eee;
   }
 
-  
+
   .info-text {
     font-style: italic;
     font-size: 14px;
     text-align: end;
     color: #ccc;
   }
-  
+
   .validation-errors {
     color: red;
     font-size: 0.8rem;
@@ -154,7 +154,7 @@
     list-style-type: none;
     padding: 0;
   }
-  
+
   .validation-error-item {
     margin: 10px 0 5px 0;
   }
@@ -164,7 +164,7 @@
     margin: 30px auto;
     width: 300px;
   }
-  
+
   .password-containerFrom .inputText {
     font-size: 20px;
     width: 100%;
@@ -174,7 +174,7 @@
     background-color: transparent;
     outline: none;
   }
-  
+
   .password-containerFrom .label {
     position: absolute;
     top: 5px;
@@ -184,14 +184,14 @@
     transition: all 0.3s ease;
     pointer-events: none;
   }
-  
+
   .password-containerFrom .inputText:focus ~ .label,
   .password-containerFrom .inputText:not(:placeholder-shown) ~ .label {
     top: -15px;
     font-size: 16px;
     color: #333;
   }
-  
+
   .password-containerFrom .underline {
     position: absolute;
     bottom: 0;
@@ -202,9 +202,94 @@
     transform: scaleX(0);
     transition: all 0.3s ease;
   }
-  
+
   .password-containerFrom .inputText:focus ~ .underline,
   .password-containerFrom .inputText:not(:placeholder-shown) ~ .underline {
     transform: scaleX(1);
   }
-  
+
+
+ /* Estilo de inputs para modificar */
+
+.input-container .inputText.has-initial-value,
+.input-container input[type="email"].has-initial-value,
+.input-container input[type="text"].has-initial-value,
+.input-container input[type="password"].has-initial-value,
+.input-container input[type="textarea"].has-initial-value,
+.input-container input[type="date"].has-initial-value {
+  color: #ccc;
+  font-style: italic;
+}
+
+.input-container .inputText:focus,
+.input-container input[type="email"]:focus,
+.input-container input[type="text"]:focus,
+.input-container input[type="password"]:focus,
+.input-container input[type="textarea"]:focus,
+.input-container input[type="date"]:focus,
+.input-container input[type="password"]:not(:placeholder-shown),
+.input-container input[type="textarea"]:not(:placeholder-shown) {
+  color: black;
+  font-style: normal;
+}
+
+.input-container .underline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #333;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
+
+.input-container .underline.has-initial-value {
+  transform: scaleX(0);
+}
+
+.input-container .inputText:focus ~ .underline,
+.input-container .inputText:not(:placeholder-shown) ~ .underline,
+.input-container .has-selection:focus ~ .underline,
+.input-container .has-selection ~ .underline,
+.input-container input[type="date"]:focus ~ .underline,
+.input-container input[type="date"].has-content ~ .underline,
+.input-container input[type="email"]:focus ~ .underline,
+.input-container input[type="email"]:not(:placeholder-shown) ~ .underline,
+.input-container input[type="password"]:focus ~ .underline,
+.input-container input[type="password"]:not(:placeholder-shown) ~ .underline {
+  transform: scaleX(1);
+}
+
+.labelSelect.has-focus,
+.input-container .has-selection ~ .labelSelect {
+  top: 0;
+  font-size: 16px;
+  color: #333;
+}
+
+.input-container .inputText:focus ~ .label,
+.input-container .inputText:not(:placeholder-shown) ~ .label,
+.input-container input[type="date"]:focus ~ .label,
+.input-container input[type="date"].has-content ~ .label,
+.input-container input[type="email"]:focus ~ .label,
+.input-container input[type="email"]:not(:placeholder-shown) ~ .label,
+.input-container input[type="password"]:focus ~ .label,
+.input-container input[type="password"]:not(:placeholder-shown) ~ .label {
+  top: -15px;
+  font-size: 16px;
+  color: #333;
+}
+
+/* Hacer que el date siempre esté en focus para que el label esté arriba */
+.input-container input[type="date"] ~ .label {
+  top: -20px;
+  font-size: 16px;
+}
+
+.input-container textarea.inputText {
+  overflow: hidden;
+  resize: none;
+  min-height: 20px; 
+  max-height: 100px; 
+}
