--- a/Frontend/src/components/PagesComponents/Customer/CustomerListTable.css
+++ b/Frontend/src/components/PagesComponents/Customer/CustomerListTable.css
@@ -31,7 +31,8 @@
     align-items: center;
     padding-left: 5px;
     column-gap: 10px;
-    height: 50px;
+    font-size: 0.9rem;
+    height: 45px;
     border-bottom: 1px solid #eee;
 }
 
@@ -52,10 +53,19 @@
     width: 250px;
 }
 
+.customerTableHeadRowPhone,
+.customerTableBodyRowPhone {
+    width: 100px;
+}
+
 
 .customerTableHeadRowStatus,
 .customerTableBodyRowStatus {
     width: 80px;
+}
+
+.customerTableBodyRowStatus{
+    font-weight: 600;
 }
 
 .customerTableHeadRowActions,
