--- a/Frontend/src/components/PagesComponents/Invoces/InvoicesListTable.css
+++ b/Frontend/src/components/PagesComponents/Invoces/InvoicesListTable.css
@@ -37,8 +37,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    height: 50px;
+    font-size: 0.9rem;
+    height: 45px;
     border-bottom: 1px solid #eee;
 }
 
@@ -77,6 +77,10 @@
 #invoicesTableHeadRowEstatus,
 .invoicesTableBodyRowEstatus {
     width: 150px;
+}
+
+.invoicesTableBodyRowEstatus {
+    font-weight: 600;
 }
 
 #invoicesTableHeadRowActions,
