--- a/Frontend/src/components/PagesComponents/Products/productListTable.css
+++ b/Frontend/src/components/PagesComponents/Products/productListTable.css
@@ -50,8 +50,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 5px;
-    height: 50px;
+
+    height: 45px;
+    font-size: 0.9rem;
     border-bottom: 1px solid #eee;
 }
 
@@ -70,9 +71,13 @@
     width: 120px;
 }
 
+.productTableBodyRef {
+    padding-left: 5px;
+}
+
 #productTableHeadRowName,
 .productTableBodyName {
-    width: 240px;
+    width: 260px;
 }
 
 #productTableHeadRowPrice,
@@ -85,9 +90,12 @@
 }
 
 #productTableHeadRowStatus, .productTableBodyStatus {
-    width: 80px;
+    width: 70px;
 }
 
+.productTableBodyStatus {
+    font-weight: 600;
+}
 
 .productTableBodyActions,
 #productTableHeadRowActions {
