--- a/Frontend/src/components/PagesComponents/Sales/SalesListTable.css
+++ b/Frontend/src/components/PagesComponents/Sales/SalesListTable.css
@@ -6,10 +6,11 @@
 }
 
 #sales_table {
-  max-width: 1000px;
+  max-width: 1100px;
   border-radius: 8px;
   padding: 10px 15px;
   margin-top: 10px;
+
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
@@ -36,8 +37,9 @@
   justify-content: space-between;
   border-bottom: 1px solid #eee;
   padding-left: 5px;
+  font-size: 0.9rem;
   align-items: center;
-  height: 50px;
+  height: 45px;
 }
 
 .salesTableBodyRow:hover {
@@ -49,7 +51,7 @@
 
 #salesTableHeadRowRef,
 .salesTableBodyRowRef {
-  width: 120px;
+  width: 100px;
 }
 
 #salesTableHeadRowName,
@@ -71,14 +73,18 @@
 
 #salesTableHeadRowSalesAgent,
 .salesTableBodyRowSalesAgent {
-  width: 100px;
+  width: 120px;
   padding-left: 10px;
 }
 
 #salesTableHeadRowEstatus,
 .salesTableBodyRowEstatus {
-  width: 120px;
+  width: 110px;
   padding-left: 10px;
+}
+
+.salesTableBodyRowEstatus {
+  font-weight: 600;
 }
 
 #salesTableHeadRowActions,
