--- a/Frontend/src/components/PagesComponents/Shipment/ShipListTable.css
+++ b/Frontend/src/components/PagesComponents/Shipment/ShipListTable.css
@@ -36,7 +36,8 @@
   border-bottom: 1px solid #eee;
   padding-left: 5px;
   align-items: center;
-  height: 50px;
+  font-size: 0.9rem;
+  height: 45px;
 }
 
 .shipmentTableBodyRow:hover {
@@ -62,6 +63,10 @@
 #shipmentTableHeadRowStatus,
 .shipmentTableBodyRowStatus {
   width: 100px;
+}
+
+.shipmentTableBodyRowStatus {
+  font-weight: 600;
 }
 
 #shipmentTableHeadRowActions,
