--- a/Frontend/src/components/PagesComponents/Visits/VisitListTable.css
+++ b/Frontend/src/components/PagesComponents/Visits/VisitListTable.css
@@ -38,7 +38,8 @@
   border-bottom: 1px solid #eee;
   padding-left: 5px;
   align-items: center;
-  height: 50px;
+  font-size: 0.9rem;
+  height: 45px;
 }
 
 #visitTableBodyRow:hover {
@@ -47,17 +48,22 @@
 
 #VisitTableHeadRowRef,
 .visitTableBodyRowRef {
-  width: 140px;
+  width: 130px;
 }
 
 #visitTableHeadRowName,
 .visitTableBodyRowName {
-  width: 120px;
+  width: 140px;
+}
+
+#visitTableHeadRowPhone,
+.visitTableBodyRowPhone {
+  width: 90px;
 }
 
 #visitTableHeadRowDate,
 .visitTableBodyDate {
-  width: 150px;
+  width: 135px;
 }
 
 #visitTableHeadRowStatus,
@@ -65,9 +71,13 @@
   width: 100px;
 }
 
+.visitTableBodyRowStatus {
+  font-weight: 600;
+}
+
 #visitTableHeadRowActions,
 .visitTableBodyRowActions {
-  width: 200px;
+  width: 188px;
 }
 
 #visitTableHeadRowActions {
