Cambios en los botones de repartidores

--- a/Frontend/src/components/Dashboard/DataDashboard/ratingDashboard.css
+++ b/Frontend/src/components/Dashboard/DataDashboard/ratingDashboard.css
@@ -31,12 +31,13 @@
 .servicio_dashboard {
     font-size: 1.3rem;
     font-weight: 600;
-    margin-bottom: 10px;
+
 }
 .company_dashboard {
     font-size: 1.1rem;
     margin-bottom: 5px;
     font-weight: 500;
+    margin-top: 5px;
 
 }
 
