--- a/Frontend/src/components/PagesComponents/Route/RoutesPage.css
+++ b/Frontend/src/components/PagesComponents/Route/RoutesPage.css
@@ -49,6 +49,25 @@
   display: block;
 }
 
+h6 {
+  font-size: 1.25rem;
+}
+
+
+.routes_page_user-details p {
+  font-size: 0.8rem;
+  font-style: italic;
+  fill: #141414;
+}
+.routes_page_button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.routes_page_arrow {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 @media (max-width: 600px) {
   .routes_page_popup {
     width: 90%; 
@@ -56,7 +75,7 @@
   
   .routes_page_lista-repartidores {
     padding: 5px 10px; 
-    max-height: 260px; 
+
     max-width: 300px;
     margin-left: 10px;
   }
@@ -69,9 +88,7 @@
     margin: 10px 0; 
   }
   
-  .routes_page_card-content {
-    padding: 10px; 
-  }
+
 }
 
 .routes_page_card-container {
@@ -92,8 +109,8 @@
 }
 
 .routes_page_avatar {
-  width: 50px; 
-  height: 50px;
+  width: 80px; 
+  height: 80px;
   border-radius: 50%;
   margin-right: 10px;
 }
